force-app/main/default/objects/Code_Snippet__c/Code_Snippet__c.object-meta.xml
<CustomObject>
    <customHelpPage>SVMX_LaunchHelp</customHelpPage>
    <description>Javascript Code snippets are maintained in this object.</description>
    <label>Code Snippet</label>
    <nameField>
        <displayFormat>{0000000000}</displayFormat>
        <label>Record Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Code Snippets</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>