force-app/main/default/objects/Code_Snippet__c/fields/Description__c.field-meta.xml
<CustomField>
    <fullName>Description__c</fullName>
    <description>Enter a detailed description of this code snippet.</description>
    <inlineHelpText>Enter a detailed description of this code snippet.</inlineHelpText>
    <label>Description</label>
    <length>32000</length>
    <type>LongTextArea</type>
</CustomField>