force-app/main/default/objects/Code_Snippet__c/fields/IsStandard__c.field-meta.xml
<CustomField>
    <fullName>IsStandard__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Flag to indicate if the code snippet is a standard ServiceMax snippet.</description>
    <inlineHelpText>Flag to indicate if the code snippet is a standard ServiceMax snippet.</inlineHelpText>
    <label>Is Standard</label>
    <type>Checkbox</type>
</CustomField>