force-app/main/default/objects/Code_Snippet__c/fields/Name__c.field-meta.xml
<CustomField>
    <fullName>Name__c</fullName>
    <label>Snippet Name</label>
    <length>150</length>
    <type>Text</type>
</CustomField>