force-app/main/default/objects/Code_Snippet__c/fields/SM_Snippet_Version__c.field-meta.xml
<CustomField>
    <fullName>SM_Snippet_Version__c</fullName>
    <description>Determines the code snippet version</description>
    <inlineHelpText>Determines the code snippet version</inlineHelpText>
    <label>Snippet Version</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>1.0</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>