force-app/main/default/objects/Code_Snippet__c/fields/Type__c.field-meta.xml
<CustomField>
    <fullName>Type__c</fullName>
    <description>Select type of code snippet.</description>
    <inlineHelpText>Select type of code snippet.</inlineHelpText>
    <label>Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>JavaScript</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>